jdk11での実行方法の追記とモデル編集画面でのモデル要素の種類表示の追加を行う。